--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
     "prefer-stable": true,
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.3",
-        "grizz-it/configuration": "^1.1",
-        "grizz-it/storage": "^1.0",
-        "grizz-it/vfs": "^1.0",
-        "ulrack/kernel": "^1.3",
-        "ulrack/services": "^3.0"
+        "php": "^8.0",
+        "grizz-it/configuration": "^1.3",
+        "grizz-it/services": "^1.0",
+        "grizz-it/storage": "^1.1",
+        "grizz-it/vfs": "^1.1",
+        "ulrack/kernel": "^2.0"
     },
     "authors": [
         {
@@ -54,7 +54,7 @@
         ]
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.3",
-        "squizlabs/php_codesniffer": "^3.5"
+        "phpunit/phpunit": "^9.5",
+        "squizlabs/php_codesniffer": "^3.6"
     }
 }
